# internal/server/http/controller/auth/auth_res.go
@@ -1,6 +1,0 @@
-package authctrl
-
-type GetUserResponse struct {
-	Name string
-	Age  int
-}
