# pkg/infrastructure/req/auth_req.go
@@ -1,0 +1,6 @@
+package req
+
+type LoginRequest struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required,min=6,max=20"`
+}
