# pkg/infrastructure/res/auth_res.go
@@ -1,0 +1,6 @@
+package res
+
+type LoginRes struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
